/*
 * $Id: ChangeLog,v 1.5176 2006/09/29 00:38:57 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2006-09-28 22:15 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * utils/xbscript/xbscript.prg
    * Simplified NextExp() to match any content inside (...) {...} and [...]
      Clipper does not validate bracketed expressions.

2006-09-28 20:24 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * contrib/rdd_ads/adsfunc.c
  * source/rtl/inkey.c
    * Missing type casts

  * source/rtl/setfunc.prg
    * Updated __SetFunction() to support numerics and arrays argumnts now supported by __Keyboard()

  * utils/xbscript/xbs_harb.ch
    * Corrected support for Extended Strings (E"...")
    + Added ' and " as valid array prefixes.

  * utils/xbscript/xbsclass.ch
    * Synched with hbclass.ch

  * utils/xbscript/xbscript.prg
    * Minor correction to white space management in line continuation
    * Minor correction to handling of s_Pending in NextExp() for wild matchers <**>
    * Minor correction in NextExp() for extended matchers <()>
    - Removed defedout old code in NextExp() for #ifdef EXPLICIT_BLOCK
    * Minro refinment to last fix of END* rules
    * Updated burned-in rules as per updated xbsclass.ch

2006-09-28 08:10 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
  * source/rtl/inkey.c
    + added support for KEYBOARD { nInteger, cString, cString2, nInteger2, ... }
                        KEYBOARD nInteger
                        KEYBOARD cString
    + __KEYBOARD( xData, lAddToExistingBuffer ) ( Default = .F. ) Where
                 the second parameter determines if we want xData added to the
                 existing keyboard buffer contents ( .T. ) or replaced.

2006-09-27 10:00 UTC-0300 Eduardo Fernandes <modalsist@yahoo.com.br>
  * source\rtl\tbcolumn.prg